--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/vercel": "^7.8.2",
     "@iconify-json/mdi": "^1.2.1",
     "@tailwindcss/typography": "^0.5.15",
     "astro": "^4.16.6",
